<resources>
    <string name="app_name">MARGAJAYA</string>
    <string name="login_title">SignIn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="telephone">Telephone</string>
    <string name="username">Username</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="register_title">SignUp</string>
    <string name="logout">Logout</string>
    <string name="margajaya">GOR Marga Jaya</string>
    <string name="alamat_marga">Jl. Kadisoka, Tajem, Maguwoharjo, Kec. Depok, Kabupaten Sleman, Daerah Istimewa Yogyakarta 55281</string>
    <string name="rating_marga">4.4</string>
    <string name="jam_marga">08:00 - 23:00 WIB</string>
    <string name="location">Location</string>
    <string name="admin">Admin</string>
    <string name="home">Home</string>
    <string name="histori">History</string>
    <string name="profil">Profile</string>
    <string name="role">Role</string>
    <string name="nb">*Jika ketika hari pesan/sewa tidak bisa datang,bisa merubah jadwal sewa pada h-1 sebelum hari sewa.</string>
    <string name="nb2">*Perubahan jadwal tersebut akan dilayani oleh Admin melalui whatsapp yang tertera pada menu pojok kiri atas .</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>