<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/more"
        android:title=""
        app:showAsAction="always"
        android:icon="@drawable/round_more_vert_24">
        <menu>

            <item
                android:id="@+id/location"
                android:contentDescription="@string/location"
                android:title="@string/location"
                android:icon="@drawable/ic_location"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/admin"
                android:contentDescription="@string/admin"
                android:title="@string/admin"
                android:icon="@drawable/ic_person_black"
                app:showAsAction="ifRoom"/>


            <item
                android:id="@+id/logout"
                android:contentDescription="@string/logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_logout"
                app:showAsAction="ifRoom" />

        </menu>

    </item>
<!--        android:menuCategory="container">-->

</menu>