<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.map.LocationActivity">


    <fragment
        android:id="@+id/maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.card.MaterialCardView
        style="@style/CustomCardCorners"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/graves"
            android:text="@string/margajaya"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamat_marga"
            android:fontFamily="@font/freesans"
            android:layout_marginTop="48dp"
            android:textSize="13.8sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"/>


        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="0.1"
            android:rating="4.4"
            android:progressTint="@color/primary"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:progressBackgroundTint="@color/second"
            android:layout_marginStart="280dp"
            android:layout_marginTop="25dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            app:cardCornerRadius="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="95dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jam_marga"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>